[package]
name = "circleci"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "circleci"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.10.0", features = ["macros"] }
serde_json = "1.0"
ffi-convert = "0.5.0"
ffi-convert-derive = "0.2.1"
libc = "0.2"
